# hodge-belief-rs

./: AGENT.md  Cargo.toml  README.md
examples/: tutorial.rs
src/: belief_network.rs  curl_flow.rs  gradient_flow.rs  harmonic_flow.rs  hodge_decomposition.rs  lib.rs  linalg.rs  simplicial.rs  stability.rs
