[package]
name = "hodge-belief-rs"
version = "0.1.0"
edition = "2021"
description = "Hodge decomposition of belief systems — applying Hodge theory to analyze belief flow, conflict, and stability in multi-agent networks"
license = "MIT"
repository = "https://github.com/SuperInstance/hodge-belief-rs"
keywords = ["hodge-theory", "belief-systems", "network-analysis", "simplicial-complex", "multi-agent"]
categories = ["mathematics", "science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
